<resources>
    <string name="app_name">Series Maníacos</string>
    <string name="email">email</string>
    <string name="pass">password</string>
    <string name="sig_in">SIG IN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_tabs">tabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabb">Series</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tab">Series</string>
    <string name="req_num_telef">Debe introducir el número de teléfono.</string>
    <string name="error_verif">OnVerificationFailed</string>
    <string name="time_out_code">OnCodeAutoRetrievalTimeOut :</string>
    <string name="error_log">Fallo al loguearse.</string>
    <string name="introd_cod_sms">Debe introducir el código recibido por SMS.</string>
    <string name="error_cod_verif">Código incorrecto.</string>
    <string name="perm_no_aceptados">Si no acepta los permisos la aplicación no puede seguir.</string>
    <string name="text_verif_num_telef">Verifica tu número de teléfono.</string>
    <string name="text_msg_autent_aviso">Series enviará un único mensaje SMS para verificar tu número de teléfono.</string>
    <string name="text_msg_autent_num_tel">Introduzca su número de teléfono y pulse OK.</string>
    <string name="hint_num_telef">número de teléfono</string>
    <string name="btn_ok">OK</string>
    <string name="text_msg_autent_aviso2">En caso de que el SMS no se verifique automaticamente introduzca el código recibido y pulse ENVIAR.</string>
    <string name="hint_cod_rec">código recibido</string>
    <string name="sigin">SIGIN</string>
    <string name="toast_usu_reg">Usuario registrado.</string>
    <string name="msg_registro_uso_email">El nick introducido ya está en uso!!</string>
    <string name="error_registro_campos_vacios">Debe rellenar todos los campos!!</string>
    <string name="error_registro_nick">El nick no puede contener más de 15 caracteres.</string>
    <string name="error_email_format">Formato Email incorrecto!!</string>
    <string name="hint_nick">Nick</string>
    <string name="hint_mail">Email</string>
    <string name="btn_avatar">Selecciona un avatar</string>
    <string name="btn_registro">REGISTRO</string>
    <string name="usu_sin_fav">Este usuario no tiene favoritos</string>
    <string name="favoritos">Favoritos.</string>
    <string name="voto_registrado">Voto registrado</string>
    <string name="usu_ya_registrado">Usuario ya registrado en la BB.DD</string>
    <string name="likes">Likes:</string>
    <string name="rep_favoritos"> ya la tienes en favoritos</string>
    <string name="anadida_fav"> añadida a favoritos</string>
    <string name="ayuda">Ayuda</string>
    <string name="msg_ayuda">Ingrese su email y a continuación detalle su problema y el equipo de desarrolladores lo intentará resolver lo antes posible.</string>
    <string name="btn_enviar_ayuda">Enviar</string>
    <string name="msg_enviado_ayuda">Mensaje enviado</string>
    <string name="btn_cancelar_ayuda">cancelar</string>
    <string name="contacto_settings">Contacto</string>
    <string name="cambiar_fondo_de_pantalla">Cambiar fondo de pantalla</string>
    <string name="cambiar_avatar_usuario">Cambiar avatar usuario</string>
    <string name="mod_avatar">Avatar modificado correctamente</string>
    <string name="selecciona_una_foto_de_perfil">SELECCIONA UNA FOTO DE PERFIL</string>
    <string name="mofificar">Mofificar</string>
    <string name="modificar">modificar</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="cancelar">Cancelar</string>
    <string name="selec_accion">Selecciona una acción</string>
    <string name="selec_app">Selecciona aplicación</string>
    <string name="perfil_mod">Perfil modificado correctamente</string>
    <string name="importante">Importante</string>
    <string name="guardarcambios">¿Desea guardar los cambios?</string>
    <string name="confirmar">Confirmar</string>
    <string name="debe_comentar">Debe escribir algun comentario</string>
    <string name="ultima_conex_hoy">últ. vez hoy a las</string>
    <string name="ultima_conex">últ. vez</string>
    <string name="sin_contactos">Sin contactos,añade a tu agenda contactos que tengan la aplicación o invítales pulsando el menú superior.</string>
    <string name="sin_favoritos">Sin favoritos,añade tus series favoritas.</string>
    <string name="esta_serie_no_tiene_comentarios_se_el_primero_en_comentarla">Esta serie no tiene comentarios , se el primero en comentarla.</string>
    <string name="me_gusta">Me gusta</string>
    <string name="hoy_a_las">Hoy a las</string>
    <string name="texto_cargando">Cargando...Espere por favor.</string>
    <string name="texto_ayuda">En caso de problemas en el registro pulse</string>
    <string name="cambiar_fondo">Cambiar fondo</string>
    <string name="a_adir_a_favoritos">Añadir a favoritos</string>
    <string name="ir_a_filmaffinity">Ir a MOVIEDB</string>
    <string name="sin_valorar">Sin valorar</string>
    <string name="default_notification_channel_id">Channel Name</string>
    <string name="perfil">Perfil</string>
    <string name="tutorial_menu">tutorial</string>
    <string name="menu_show_tutorial">La próxima vez que ejecutes la app se visualizará el tutorial</string>
    <string name="contactos_showcase">Contactos</string>
    <string name="showcaseTextoCont">Haz click en un contacto para ver sus series favoritas.</string>
    <string name="series_showcase">Series</string>
    <string name="texto_showcase_series">Busca una serie</string>
    <string name="favoritos_showcase">Favoritos</string>
    <string name="texto_showcase_fav2">Y acceder a un foro donde podrás compartir tus opiniones solo con tus contactos.</string>
    <string name="escribe_un_comentario">Escribe un comentario...</string>
    <string name="favoritos_info_contacto">Favoritos</string>
    <string name="email_perfil">Email</string>
    <string name="volver_perfil">Volver</string>
    <string name="contactos_tab_title">CONTACTOS</string>
    <string name="series_tab_title">SERIES</string>
    <string name="favoritos_tab_title">FAVORITOS</string>
    <string name="enviar_button">ENVIAR</string>
    <string name="politica_priv_text">He leido y acepto la política de privacidad.</string>
    <string name="fondo">Fondo</string>
    <string name="galer_a_de_fondos">Galería de fondos</string>
    <string name="color_s_lido">Color sólido</string>
    <string name="vota">Vota</string>
    <string name="comentarios_text_icon">Comentarios</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar_de_favoritos">Eliminar de favoritos</string>
    <string name="compartir">Compartir</string>
    <string name="unete">Únete a mi comunidad de Series Maníacos,</string>
    <string name="te_recomiendo">Te recomiendo esta serie:</string>
    <string name="descubre_mas_en">Descubre más en</string>
    <string name="comparte_con">Comparte con</string>
    <string name="desconocido">Desconocido</string>
    <string name="t_tulo_original">Título original</string>
    <string name="fecha_de_emisi_n">Fecha de emisión</string>
    <string name="pa_s_de_or_gen">País de orígen</string>
    <string name="lenguaje_original">Lenguaje original</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="creada_por">Creada por</string>
    <string name="duraci_n_episodio">Duración episodio</string>
    <string name="estado">Estado</string>
    <string name="temporadas">Temporadas</string>
    <string name="n_mero_de_episodios">Número de episodios</string>
    <string name="no_internet_comentarios">Los comentarios no serán visibles hasta que tenga conexión a internet.</string>
    <string name="sin_con_internet">Sin conexión a internet</string>
    <string name="no_internet_no_wifi">Necesita activar los datos móviles o WIFI para usar la aplicación.</string>
    <string name="app_necesita_internet">La aplicación necesita de conexión a internet para usar esta opción.</string>
    <string name="config_permisos_manual">Desea configurar los permisos de forma manual?</string>
    <string name="si">si</string>
    <string name="no">no</string>
    <string name="app_sin_permisos">La aplicación no puede seguir sin estos permisos</string>
    <string name="permisos_descativados">Permisos desactivados</string>
    <string name="debe_aceptar_permisos">Debe aceptar los permisos para el correcto funcionamiento de la aplicación</string>
    <string name="aceptar">Aceptar</string>
    <string name="aqui">Aquí</string>
    <string name="aceptar_polit_priva">Debe aceptar la política de privacidad para continuar.</string>
    <string name="terminada">Terminada</string>
    <string name="emitiendo_o_prev">Emitiendo o en previsión de hacerlo</string>
    <string name="cancelada">Cancelada</string>
    <string name="en_produccion">En producción</string>
    <string name="error_init_youtube">Error al inicializar Youtube</string>
    <string name="error_envio_correo">Error al enviar el correo</string>
    <string name="en_linea">En línea</string>
    <string name="podras_votar_serie">Podrás votar la serie.</string>
    <string name="busca">Busca</string>
    <string name="anade_serie_fav">Añade la serie a favoritos</string>
    <string name="showcase_pulsa">Pulsa sobre una serie para ver más información</string>
    <string name="nombre">nombre</string>
    <string name="genero">Género/s</string>
    <string name="argumento">Argumento</string>
    <string name="reparto">Reparto</string>
    <string name="edad">Edad</string>
    <string name="lugar_de_nacimiento">Lugar de nacimiento</string>
    <string name="biograf_a">Biografía</string>
    <string name="cr_ditos">Créditos</string>
    <string name="interpretaci_n">Interpretación</string>
    <string name="producci_n">Producción</string>
    <string name="actores">Actores</string>
    <string name="showcase_info_actor">Pulsa sobre un actor para ver más información sobre él.</string>
    <string name="title_showcase_redes">Redes Sociales</string>
    <string name="content_showcase_redes">Pulsa para ver el perfil en redes sociales de los actores.</string>
    <string name="title_showcase_creditos">Créditos</string>
    <string name="content_showcase_creditos">Pulsa sobre una serie para ver más información sobre ella.</string>
    <string name="texto1_por_que_num_tlfno">▪ Series Maníacos necesita el número de teléfono como método de autentificación, ésta es gestionada por Firebase, plataforma de desarrollo de Google.</string>
    <string name="texto2_por_que_num_tlfno">▪ El número de teléfono que nos proporcionas lo usamos única y exclusivamente para comunicarte con tus contactos en la aplicación a través de tu agenda.</string>
    <string name="importante_may">IMPORTANTE</string>
    <string name="texto3_por_que_num_tlfno">▪ No puedes verificar un número que no es tuyo.</string>
    <string name="texto4_por_que_num_tlfno">▪ El número de teléfono que deseas verificar debe estar habilitado para recibir mensajes SMS.</string>
    <string name="texto5_por_que_num_tlfno">▪ Necesitas una conexión a Internet mediante datos móviles o Wi-Fi. Si estás fuera de tu área de cobertura o tienes una cobertura débil, es posible que experimentes problemas con la verificación.</string>
    <string name="texto6_por_que_num_tlfno">▪ Dependiendo de tu operador de telefonía, puede que haya cargos por el mensaje SMS.</string>
    <string name="texto7_por_que_num_tlfno">▪ Para más información puedes visitar nuestra</string>
    <string name="texto8_por_que_num_tlfno">Política de privacidad</string>
    <string name="button_por_que_num_tlfno">Volver</string>
</resources>